Code Cleanup FieldType, GlobalSeq, Kind, NumberType, TelegramDateUtil, TrimType